--- a/index.html
+++ b/index.html
@@ -13,12 +13,43 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="clearfix">
+            <div class="logo left">
+                <img src="img/logo-small.png" alt="logo">
+            </div>
+            <ul class="left">
+                <li><a href="">Perchè Dropbox</a></li>
+                <li><a href="">Funzioni</a></li>
+                <li><a href="">Piani e prezzi</a></li>
+            </ul>
 
+            <div class="button blu right">
+                <a href="">Inizia</a>
+            </div>
+            <ul class="right">
+                <li><a href="">Supporto</a></li>
+                <li><a href="">Contatta l'ufficio vendite</a></li>
+                <li><a href="">Accedi</a></li>
+            </ul>
         </nav>
 
-        <div>
+        <div id="jumbo" class="clearfix">
+            <div class="box">
+                <h1>Tutto ciò che ti serve per il lavoro, <br> in  un unico posto</h1>
+                <p class="first">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br>
+                Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
 
+                <div class="button blu">
+                    <a href="">Inizia subito la tua prova gratuita</a>
+                </div>
+                <p class="second">Annulla in qualsiasi momento</p>
+                <div class="arrow">
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
+            </div>
+            <figure>
+                <img src="img/jumbo.png" alt="schermata Dropbox">
+            </figure>
         </div>
     </header>
     
@@ -27,7 +58,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
