--- a/index.html
+++ b/index.html
@@ -209,8 +209,22 @@
                 </div>
             </section>
 
+            <section class="clearfix">
+                <div class="partner left">
+                    <img src="img/partner.png" alt="">
+                </div>
+
+                <div class="desc right">
+                    <p class="big">Entra in contatto con un partner Dropbox</p>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <div class="button white border">
+                        <a href="">Trova un partner</a>
+                    </div>
+                </div>
+            </section>
+
             <section>
-                
+                <p class="piano">Esegui piu</p>
             </section>
         </div>
     </main>
