--- a/index.html
+++ b/index.html
@@ -223,8 +223,68 @@
                 </div>
             </section>
 
-            <section>
-                <p class="piano">Esegui piu</p>
+            <section class="clearfix">
+                <p class="piano accuracy">Esegui più operazioni con Dropbox Business</p>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-coordinate-it.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-multi-device.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-integrations-it.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
+
+                <div class="segment left">
+                    <div class="imgbox">
+                        <img src="img/business-feature-security.png" alt="">
+                    </div>
+                    <div class="textbox">
+                        <p class="big">Passa di meno da uno strumento all'altro</p>
+                        <p class="small">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropboxPaper direttamente da Dropbox</p>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
