--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     
                     <div class="offerta left ">
                         <div class="top">
-                            <i class="fa-solid fa-building">></i> Singolo
+                            <i class="fa-solid fa-building"></i> Singolo
                         </div>
                         <div class="centrer">
                             <div class="pre-butt">
@@ -293,7 +293,7 @@
         </div>
 
         <section class="clearfix">
-            <div class="adjust left">
+            <div class="adjust left clearfix">
                 <div class="square green left">
                     <img src="img/designit.svg" alt="arizona">
                 </div>
@@ -332,6 +332,14 @@
 
             <div class="square dark right">
                 <img src="img/lonely_planet.svg" alt="arizona">
+            </div>
+        </section>
+
+        <section class="back">
+            <p class="giga">Porta Dropbox Business <br> nella tua azienda.</p>
+
+            <div class="button white">
+                <a href="">Inizia la tua prova gratuita</a>
             </div>
         </section>
 
