--- a/index.html
+++ b/index.html
@@ -343,6 +343,38 @@
             </div>
         </section>
 
+        <section class="container">
+            <p class="big">Domande frequenti</p>
+            <hr>
+            <div class="clearfix">
+                <p class="left">qual'è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</p>
+
+                <i class="fa-solid fa-chevron-down right"></i>
+            </div>
+            <hr>
+
+            <div class="clearfix">
+                <p class="left">qual'è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</p>
+
+                <i class="fa-solid fa-chevron-down right"></i>
+            </div>
+            <hr>
+
+            <div class="clearfix">
+                <p class="left">qual'è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</p>
+
+                <i class="fa-solid fa-chevron-down right"></i>
+            </div>
+            <hr>
+
+            <div class="clearfix">
+                <p class="left">qual'è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</p>
+
+                <i class="fa-solid fa-chevron-down right"></i>
+            </div>
+            <hr>
+        </section>
+
 
     </main>
 
