--- a/index.html
+++ b/index.html
@@ -379,7 +379,53 @@
     </main>
 
     <footer>
+        <div class="final-container clearfix">
+            <ul class="left">
+                <li class="last-title">Dropbox</li>
+                <li>Applicazione desktop</li>
+                <li>Perchè dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>Funzioni</li>
+            </ul>
 
+            <ul class="left">
+                <li class="last-title">Prodotti</li>
+                <li>Applicazione desktop</li>
+                <li>Perchè dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>Funzioni</li>
+            </ul>
+
+            <ul class="left">
+                <li class="last-title">Azienda</li>
+                <li>Applicazione desktop</li>
+                <li>Perchè dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>Funzioni</li>
+            </ul>
+
+            <ul class="left">
+                <li class="last-title">Supporto</li>
+                <li>Applicazione desktop</li>
+                <li>Perchè dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>Funzioni</li>
+            </ul>
+
+            <ul class="left">
+                <li class="last-title">Community</li>
+                <li>Applicazione desktop</li>
+                <li>Perchè dropbox</li>
+                <li>Piani</li>
+            </ul>
+        </div>
+        <div class="final-container">
+            <hr>
+        </div>
     </footer>
 </body>
 </html>
