--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <p class="second">Annulla in qualsiasi momento</p>
                 <div class="arrow">
-                    <i class="fa-solid fa-arrow-down"></i>
+                    <a href="#tetris"><i class="fa-solid fa-arrow-down"></i></a>
                 </div>
             </div>
             <div class="box two">
@@ -292,7 +292,7 @@
             <p><a href="">Scopri di più sui nostri clienti</a></p>
         </div>
 
-        <section class="clearfix">
+        <section class="clearfix" id="tetris">
             <div class="adjust left clearfix">
                 <div class="square green left">
                     <img src="img/designit.svg" alt="arizona">
@@ -343,7 +343,7 @@
             </div>
         </section>
 
-        <section class="container">
+        <section class="repeat container">
             <p class="big">Domande frequenti</p>
             <hr>
             <div class="clearfix">
@@ -425,6 +425,7 @@
         </div>
         <div class="final-container">
             <hr>
+            <p><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-up"></i></p>
         </div>
     </footer>
 </body>
