aggiunta di commenti

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <!-- sezione nav -->
         <nav class="clearfix">
             <div class="logo left">
                 <img src="img/logo-small.png" alt="logo">
@@ -32,8 +33,10 @@
                 <li><a href="">Accedi</a></li>
             </ul>
         </nav>
+        <!-- /fine nav -->
 
         <div id="jumbo" class="clearfix">
+            <!-- testi e bottone -->
             <h1>Tutto ciò che ti serve per il lavoro, <br> in  un unico posto</h1>
             <div class="box one">
                 <p class="first">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br>
@@ -47,6 +50,7 @@
                     <a href="#tetris"><i class="fa-solid fa-arrow-down"></i></a>
                 </div>
             </div>
+            <!-- immagine -->
             <div class="box two">
                 <img src="img/jumbo.png" alt="schermata Dropbox">
             </div>
@@ -61,6 +65,7 @@
                     <p class="circlebutt"><span class="signed"></span> fatturazione mensile</p>
                     <p class="circlebutt"><span class=" signed un"></span> fatturazione annuale</p>
                 </div>
+                <!-- le tre colonne -->
                 <div class="clearfix">
                     <div class="offerta left">
                         <div class="top">
@@ -193,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- colonna bottoom -->
                 <div class="bottom">
                     <div class="top">
                         <i class="fa-solid fa-building"></i>Team
@@ -208,7 +213,7 @@
                     </div>
                 </div>
             </section>
-
+            <!-- sezione con  immagine e testo allinieati -->
             <section class="clearfix">
                 <div class="partner left">
                     <img src="img/partner.png" alt="">
@@ -222,7 +227,7 @@
                     </div>
                 </div>
             </section>
-
+            <!-- sezione float -->
             <section class="clearfix">
                 <p class="piano accuracy">Esegui più operazioni con Dropbox Business</p>
 
@@ -289,10 +294,10 @@
 
             <p class="piano acc">Più di 500.000 team <br> utilizzano Dropbox Business</p>
 
-            <p><a href="">Scopri di più sui nostri clienti</a></p>
+            <p id="tetris"><a href="">Scopri di più sui nostri clienti</a></p>
         </div>
-
-        <section class="clearfix" id="tetris">
+        <!-- sezione quadratini -->
+        <section class="clearfix">
             <div class="adjust left clearfix">
                 <div class="square green left">
                     <img src="img/designit.svg" alt="arizona">
@@ -342,7 +347,7 @@
                 <a href="">Inizia la tua prova gratuita</a>
             </div>
         </section>
-
+        <!-- domande frequanti -->
         <section class="repeat container">
             <p class="big">Domande frequenti</p>
             <hr>
@@ -351,6 +356,8 @@
 
                 <i class="fa-solid fa-chevron-down right"></i>
             </div>
+            <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam expedita ducimus voluptatum consequatur! Quam rem ipsam ex, reiciendis distinctio itaque repellat natus fugiat saepe quos perspiciatis nostrum libero architecto suscipit consectetur amet accusantium. Dicta facere quod exercitationem, quis adipisci aspernatur vero! Temporibus atque, rem laborum fuga saepe provident architecto deleniti nam delectus id reiciendis sunt velit ullam illum quaerat porro quisquam natus nisi enim quae mollitia? Aspernatur cum accusamus iusto alias ducimus magni, labore atque, quaerat velit, eaque maiores quae praesentium mollitia optio neque quos quam nesciunt ipsam eos repellendus ut sed qui impedit? Reiciendis provident quia commodi laborum odio perferendis pariatur ut esse eligendi suscipit, natus, modi qui delectus ipsum corrupti maxime mollitia ullam sint rerum veritatis architecto, labore enim sunt! Est quisquam aliquid fugit id eaque reprehenderit, laboriosam saepe qui consectetur eius deserunt repudiandae ratione, numquam libero. Reiciendis, enim quibusdam? Rerum incidunt minus animi laborum ex quibusdam facere!
+            </p>
             <hr>
 
             <div class="clearfix">
@@ -358,6 +365,8 @@
 
                 <i class="fa-solid fa-chevron-down right"></i>
             </div>
+            <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam expedita ducimus voluptatum consequatur! Quam rem ipsam ex, reiciendis distinctio itaque repellat natus fugiat saepe quos perspiciatis nostrum libero architecto suscipit consectetur amet accusantium. Dicta facere quod exercitationem, quis adipisci aspernatur vero! Temporibus atque, rem laborum fuga saepe provident architecto deleniti nam delectus id reiciendis sunt velit ullam illum quaerat porro quisquam natus nisi enim quae mollitia? Aspernatur cum accusamus iusto alias ducimus magni, labore atque, quaerat velit, eaque maiores quae praesentium mollitia optio neque quos quam nesciunt ipsam eos repellendus ut sed qui impedit? Reiciendis provident quia commodi laborum odio perferendis pariatur ut esse eligendi suscipit, natus, modi qui delectus ipsum corrupti maxime mollitia ullam sint rerum veritatis architecto, labore enim sunt! Est quisquam aliquid fugit id eaque reprehenderit, laboriosam saepe qui consectetur eius deserunt repudiandae ratione, numquam libero. Reiciendis, enim quibusdam? Rerum incidunt minus animi laborum ex quibusdam facere!
+            </p>
             <hr>
 
             <div class="clearfix">
@@ -365,6 +374,8 @@
 
                 <i class="fa-solid fa-chevron-down right"></i>
             </div>
+            <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam expedita ducimus voluptatum consequatur! Quam rem ipsam ex, reiciendis distinctio itaque repellat natus fugiat saepe quos perspiciatis nostrum libero architecto suscipit consectetur amet accusantium. Dicta facere quod exercitationem, quis adipisci aspernatur vero! Temporibus atque, rem laborum fuga saepe provident architecto deleniti nam delectus id reiciendis sunt velit ullam illum quaerat porro quisquam natus nisi enim quae mollitia? Aspernatur cum accusamus iusto alias ducimus magni, labore atque, quaerat velit, eaque maiores quae praesentium mollitia optio neque quos quam nesciunt ipsam eos repellendus ut sed qui impedit? Reiciendis provident quia commodi laborum odio perferendis pariatur ut esse eligendi suscipit, natus, modi qui delectus ipsum corrupti maxime mollitia ullam sint rerum veritatis architecto, labore enim sunt! Est quisquam aliquid fugit id eaque reprehenderit, laboriosam saepe qui consectetur eius deserunt repudiandae ratione, numquam libero. Reiciendis, enim quibusdam? Rerum incidunt minus animi laborum ex quibusdam facere!
+            </p>
             <hr>
 
             <div class="clearfix">
@@ -372,12 +383,14 @@
 
                 <i class="fa-solid fa-chevron-down right"></i>
             </div>
+            <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam expedita ducimus voluptatum consequatur! Quam rem ipsam ex, reiciendis distinctio itaque repellat natus fugiat saepe quos perspiciatis nostrum libero architecto suscipit consectetur amet accusantium. Dicta facere quod exercitationem, quis adipisci aspernatur vero! Temporibus atque, rem laborum fuga saepe provident architecto deleniti nam delectus id reiciendis sunt velit ullam illum quaerat porro quisquam natus nisi enim quae mollitia? Aspernatur cum accusamus iusto alias ducimus magni, labore atque, quaerat velit, eaque maiores quae praesentium mollitia optio neque quos quam nesciunt ipsam eos repellendus ut sed qui impedit? Reiciendis provident quia commodi laborum odio perferendis pariatur ut esse eligendi suscipit, natus, modi qui delectus ipsum corrupti maxime mollitia ullam sint rerum veritatis architecto, labore enim sunt! Est quisquam aliquid fugit id eaque reprehenderit, laboriosam saepe qui consectetur eius deserunt repudiandae ratione, numquam libero. Reiciendis, enim quibusdam? Rerum incidunt minus animi laborum ex quibusdam facere!
+            </p>
             <hr>
         </section>
 
 
     </main>
-
+    <!-- inizio footer -->
     <footer>
         <div class="final-container clearfix">
             <ul class="left">
@@ -428,5 +441,6 @@
             <p><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-up"></i></p>
         </div>
     </footer>
+    <!-- /fine footer -->
 </body>
 </html>
