completato menu a tendina

--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                 <a href="">Inizia</a>
             </div>
             <ul class="right">
-                <li><a href="">Supporto</a></li>
+                <li>
+                    <div class="dropdown">
+                        <a href="">Supporto</a>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </li>
                 <li><a href="">Contatta l'ufficio vendite</a></li>
                 <li><a href="">Accedi</a></li>
             </ul>
